sort.basic.bubble.AlgBubbleSort2.scala.error
Erreur de compilation :
AlgBubbleSort2:4: error: ')' expected but ',' found.
    for (i <- n-2,0) {
                 ^AlgBubbleSort2:10: error: illegal start of simple expression
} 
^