sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
    var n = getNombreValeurs()
  	for (i <- n-2,0) {
      for (j<- 0,i) {
        if (plusPetit(j+1,j))
        		echange(j+1,j)
      }
    }
}